--- a/index.html
+++ b/index.html
@@ -1,17 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index2.css">
 </head>
+
 <body>
     <p>quang</p>
 </body>
+
 </html>
 <!-- 
+    - trước khi we use cmd 'git status'
+
+        Thu muc dang lam viec-----------------Staging Area--------------Commited
+        index.html
+        index.css
+
+        kết quả: [
+            MacBook-Air-cua-Pham:gitt phamvanquang$ git status
+            On branch master
+
+            No commits yet
+
+            Untracked files:
+            (use "git add <file>..." to include in what will be committed)
+                index.css
+                index.html
+
+            nothing added to commit but untracked files present (use "git add" to track)
+        ] đóng lại cho dễ nhìn
+    - sau khi we use cmd 'git add index.html'
+
+    
     Thu muc dang lam viec-----------------Staging Area--------------Commited
-    index.html
+                                            index.html
     index.css
+
+    kết quả: [
+            MacBook-Air-cua-Pham:gitt phamvanquang$ git add index.html
+            MacBook-Air-cua-Pham:gitt phamvanquang$ git status
+            On branch master
+
+            No commits yet
+
+            Changes to be committed:
+            (use "git rm --cached <file>..." to unstage)
+
+                    new file:   index.html
+
+            Untracked files:
+            (use "git add <file>..." to include in what will be committed)
+
+                    index.css
+            ]
+            
+
+     - sau khi we use cmd 'git commit -m "add index.html file"'
+
+        Thu muc dang lam viec-----------------Staging Area--------------Commited
+                                                                        index.html
+        index.css
+
+        kết quả: [
+            MacBook-Air-cua-Pham:gitt phamvanquang$ git commit -m "add index.html file"
+            [master (root-commit) 9cd843c] add index.html file
+            1 file changed, 17 insertions(+)
+            create mode 100644 index.html
+        ]
+
+        -> sau khi sử dụng git log:
+            MacBook-Air-cua-Pham:gitt phamvanquang$ git log
+            commit 9cd843c60badd3f815e8e1df80cfe20be2fc8ef3 (HEAD -> master)
+            Author: quang <quanglatoi002@gmail.com>
+            Date:   Tue Jul 19 23:32:11 2022 +0700
+
+                add index.html file
+
  -->
